Refactor event handling service.

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -21,7 +21,8 @@
       "dom"
     ],
     "paths": {
-      "@common/*": ["common/*"]
+      "@common/*": ["common/*"],
+      "@native/*": ["../src/*"]
     }
   },
   "angularCompilerOptions": {
