--- a/web/package.json
+++ b/web/package.json
@@ -24,65 +24,65 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@angular/common": "~13.1.1",
-    "@angular/core": "~13.1.1",
-    "@angular/forms": "~13.1.1",
-    "@angular/platform-browser": "~13.1.1",
-    "@angular/platform-browser-dynamic": "~13.1.1",
-    "@angular/router": "~13.1.1",
-    "@angular/service-worker": "~13.1.1",
-    "@ionic/angular": "^6.0.1",
+    "@angular-builders/custom-webpack": "^14.0.0",
+    "@angular-devkit/build-angular": "^14.0.6",
+    "@angular/cli": "^14.0.6",
+    "@angular/common": "^14.0.6",
+    "@angular/compiler": "^14.0.6",
+    "@angular/compiler-cli": "^14.0.6",
+    "@angular/core": "^14.0.6",
+    "@angular/forms": "^14.0.6",
+    "@angular/language-service": "^14.0.6",
+    "@angular/platform-browser": "^14.0.6",
+    "@angular/platform-browser-dynamic": "^14.0.6",
+    "@angular/router": "^14.0.6",
+    "@angular/service-worker": "^14.0.6",
+    "@ionic/angular": "^6.1.14",
+    "@ionic/angular-toolkit": "^7.0.0",
     "@types/deep-equal": "^1.0.1",
+    "@types/emscripten": "^1.39.6",
+    "@types/jasmine": "~4.0.3",
+    "@types/jasminewd2": "~2.0.10",
     "@types/md5": "^2.3.1",
+    "@types/node": "^18.0.6",
     "@types/url-parse": "^1.4.6",
     "@types/uuid": "^8.3.4",
     "async-mutex": "^0.3.2",
+    "codelyzer": "^6.0.2",
+    "copy-webpack-plugin": "^11.0.0",
     "deep-equal": "^2.0.5",
+    "import-sort-style-eslint": "^6.0.0",
+    "jasmine-core": "~4.2.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "md5": "^2.3.0",
     "microevent.ts": "^0.2.1",
-    "ngx-markdown": "^13.0.0",
-    "rxjs": "~7.5.1",
+    "ngx-markdown": "^14.0.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-import-sort": "^0.0.7",
+    "protractor": "~7.0.0",
+    "pwa-asset-generator": "^6.1.1",
+    "raw-loader": "^4.0.2",
+    "rxjs": "~7.5.6",
+    "svgo": "^2.8.0",
+    "ts-loader": "^9.3.1",
+    "ts-node": "~10.9.1",
     "tslib": "^2.3.1",
+    "tslint": "~6.1.0",
+    "typedoc": "^0.23.8",
+    "typescript": "~4.7.4",
     "url-parse": "^1.5.4",
     "uuid": "^8.3.2",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
     "whatwg-fetch": "^3.6.2",
     "worker-timers": "^7.0.44",
     "yet-another-abortcontroller-polyfill": "^0.0.4",
-    "zone.js": "~0.11.4",
-    "@angular-builders/custom-webpack": "^13.1.0",
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler": "~13.1.1",
-    "@angular/compiler-cli": "~13.1.1",
-    "@angular/language-service": "~13.1.1",
-    "@ionic/angular-toolkit": "^5.0.3",
-    "@types/emscripten": "^1.39.6",
-    "@types/jasmine": "~3.10.3",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^17.0.8",
-    "codelyzer": "^6.0.2",
-    "copy-webpack-plugin": "^10.2.4",
-    "import-sort-style-eslint": "^6.0.0",
-    "jasmine-core": "~4.0.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.10",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
-    "prettier": "^2.5.1",
-    "prettier-plugin-import-sort": "^0.0.7",
-    "protractor": "~7.0.0",
-    "pwa-asset-generator": "^6.0.5",
-    "raw-loader": "^4.0.2",
-    "svgo": "^2.8.0",
-    "ts-loader": "^9.2.8",
-    "ts-node": "~10.4.0",
-    "tslint": "~6.1.0",
-    "typedoc": "^0.23.7",
-    "typescript": "~4.6.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "zone.js": "~0.11.6"
   },
   "description": "CloudpilotEmu PWA",
   "prettier": {
