Fix build. Sigh.

--- a/.github/workflows/release-preview.yaml
+++ b/.github/workflows/release-preview.yaml
@@ -33,7 +33,9 @@ jobs:
         run: yarn install
       - name: Build PWA
         working-directory: web
-        run: yarn build --configuration production,preview,ci --base-href /app-preview/
+        run: |
+          yarn run gen-revision |
+          yarn ng run app:build:production,preview,ci --base-href /app-preview/
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.5.1
         with:
