--- a/web/package.json
+++ b/web/package.json
@@ -8,10 +8,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "yarn run gen-revision && ng run app:build",
-    "build-embedded": "yarn webpack --mode production -c webpack.embedded.config.js",
+    "build-embedded": "yarn run dts-bundle-embedded && yarn webpack --mode production -c webpack.embedded.config.js",
     "start-embedded": "yarn webpack serve --mode development -c webpack.embedded.config.js",
     "typedoc-embedded": "yarn typedoc",
     "typedoc-embedded-watch": "yarn typedoc --watch --cleanOutputDir false",
+    "dts-bundle-embedded": "dts-bundle-generator --config dts-bundle-generator.json",
     "gen-revision": "echo \"export const REVISION = '`git rev-parse --short HEAD`';\" > pwa/src/revision.gen.ts",
     "test": "ng test",
     "lint": "ng lint",
@@ -22,8 +23,8 @@
     "pwa-assets": "yarn pwa-icons && yarn pwa-splash && yarn pwa-splash-dark && prettier -w --parser html pwa/src/index.html"
   },
   "private": true,
-  "dependencies": {},
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "@angular-builders/custom-webpack": "^14.0.0",
     "@angular-devkit/build-angular": "^14.0.6",
     "@angular/cli": "^14.0.6",
@@ -51,6 +52,7 @@
     "codelyzer": "^6.0.2",
     "copy-webpack-plugin": "^11.0.0",
     "deep-equal": "^2.0.5",
+    "dts-bundle-generator": "^6.12.0",
     "import-sort-style-eslint": "^6.0.0",
     "jasmine-core": "~4.2.0",
     "jasmine-spec-reporter": "~7.0.0",
