Embedded dist, finalize documentation.

--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "start-embedded": "yarn webpack serve --mode development -c webpack.embedded.config.js",
     "typedoc-embedded": "yarn typedoc",
     "typedoc-embedded-watch": "yarn typedoc --watch --cleanOutputDir false",
+    "dist-embedded": "yarn build-embedded && yarn typedoc-embedded && node script/dist-embedded",
     "dts-bundle-embedded": "dts-bundle-generator --config dts-bundle-generator.json",
     "gen-revision": "echo \"export const REVISION = '`git rev-parse --short HEAD`';\" > pwa/src/revision.gen.ts",
     "test": "ng test",
@@ -70,6 +71,7 @@
     "pwa-asset-generator": "^6.1.1",
     "raw-loader": "^4.0.2",
     "rxjs": "~7.5.6",
+    "shelljs": "^0.8.5",
     "svgo": "^2.8.0",
     "ts-loader": "^9.3.1",
     "ts-node": "~10.9.1",
