--- a/.github/workflows/release-preview.yaml
+++ b/.github/workflows/release-preview.yaml
@@ -31,6 +31,9 @@ jobs:
       - name: Install node deps
         working-directory: web
         run: yarn install
+      - name: Build Cloudpilot embedded
+        working-directory: web
+        run: yarn dist-embedded
       - name: Build PWA
         working-directory: web
         run: |
@@ -46,7 +49,9 @@ jobs:
         working-directory: cloudpilot-emu.github.io
         run: |
           test -x app-preview && rm -fr app-preview
+          test -x embedded-preview && rm -fr embedded-preview
           cp -r ../web/build-pwa ./app-preview
+          cp -r ../web/dist-embedded ./embedded-preview
           git add .
           git config --global user.email "golem@nowhere.org"
           git config --global user.name "The Golem"
