--- a/.github/workflows/release-server.yaml
+++ b/.github/workflows/release-server.yaml
@@ -22,8 +22,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Create release
-        run: gh release create ${{ env.TAG }} -d -t "${{ env.RELEASE_TITLE }}" -n "${{ env.RELEASE_NOTES }}"
+      - name: Make sure that release exists
+        run: gh release create ${{ env.TAG }} -d || true
+      - name: Augment release with title and release notes
+        run: gh release edit ${{ env.TAG }} -t "${{ env.RELEASE_TITLE }}" -n "${{ env.RELEASE_NOTES }}"
   build-server-linux:
     runs-on: ubuntu-18.04
     needs: create-release
