Hack away body scrolling around canvas on iOS.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -119,5 +119,6 @@
   "[python]": {
     "editor.codeActionsOnSave": {"source.organizeImports": true}
   },
-  "typescript.tsdk": "./cloudpilot-ionic/node_modules/typescript/lib"
+  "typescript.tsdk": "./cloudpilot-ionic/node_modules/typescript/lib",
+  "cSpell.enabled": false
 }
