Add npm publish to release action.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,9 +30,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{env.NODE_VERSION}}
+          registry-url: 'https://registry.npmjs.org'
       - name: Get version
         id: version
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
@@ -85,4 +86,9 @@ jobs:
         run: |
           zip -j ${{ env.CP_EMBEDDED_ZIP_NAME }} ${{ env.CP_EMBEDDED_ZIP_CONTENT }}
           gh release upload ${{ env.TAG }} ${{ env.CP_EMBEDDED_ZIP_NAME }}
+      - name: Publish CP embedded to NPM
+        working-directory: web/npm-embedded
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
 
