--- a/src/Makefile
+++ b/src/Makefile
@@ -222,6 +222,8 @@ SOURCE_EMU = \
 	emulator/Logging.cpp \
 	emulator/SessionImage.cpp \
 	emulator/DbBackup.cpp \
+	emulator/DbBackupNative.cpp \
+	emulator/DbBackupFallback.cpp \
 	emulator/CallbackManager.cpp \
 	emulator/DbInstaller.cpp \
 	emulator/Fifo.cpp \
