Documentation,, cleanup, enable backup on OS1/2 in web for OS1 / OS2.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,5 +120,17 @@
     "editor.codeActionsOnSave": {"source.organizeImports": true}
   },
   "typescript.tsdk": "./cloudpilot-ionic/node_modules/typescript/lib",
-  "cSpell.enabled": false
+  "cSpell.words": [
+    "Clié",
+    "Cloudpilot",
+    "framebuffer",
+    "gamepad",
+    "grafitti",
+    "homescreen",
+    "hostnames",
+    "Hotsync",
+    "Keychain",
+    "proxied",
+    "trackpad"
+  ]
 }
