Typos, add a notes on styling CP embedded.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -121,6 +121,7 @@
   },
   "typescript.tsdk": "./cloudpilot-ionic/node_modules/typescript/lib",
   "cSpell.words": [
+    "bytecode",
     "Clié",
     "Cloudpilot",
     "framebuffer",
