Expose different slot types in CLI.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,7 +106,9 @@
     "typeindex": "cpp",
     "unordered_set": "cpp",
     "variant": "cpp",
-    "*.ipp": "cpp"
+    "*.ipp": "cpp",
+    "__bits": "cpp",
+    "charconv": "cpp"
   },
   "editor.formatOnSave": true,
   "CppHelper.SourcePattern": [
