Start fleshing out MS.

--- a/src/Makefile
+++ b/src/Makefile
@@ -172,6 +172,7 @@ SOURCE_EMU = \
 	emulator/hardware/clie/EmRegsUsbPegN700C.cpp \
 	emulator/hardware/clie/EmRegsLCDCtrlT2.cpp \
 	emulator/hardware/clie/EmRegsMB86189.cpp \
+	emulator/hardware/clie/MemoryStick.cpp \
 	emulator/hardware/handera/EmRegs330CPLD.cpp \
 	emulator/hardware/handera/EmRegsVZHandEra330.cpp \
 	emulator/hardware/handera/EmSPISlave330Current.cpp \
