--- a/src/Makefile
+++ b/src/Makefile
@@ -256,6 +256,7 @@ SOURCE_NATIVE = \
 	native/MainLoop.cpp \
 	native/Silkscreen.cpp \
 	native/util.cpp \
+	native/md5.cpp \
 	native/EventHandler.cpp \
 	native/Cli.cpp \
 	native/ProxyClient.cpp \
