Precache "Cards" icon.

--- a/web/pwa/ngsw-config.json
+++ b/web/pwa/ngsw-config.json
@@ -46,6 +46,7 @@
           "/svg/log-in-outline.svg",
           "/svg/log-out-outline.svg",
           "/svg/medkit-outline.svg",
+          "/svg/folder-outline.svg",
           "/assets/**",
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
