--- a/web/package.json
+++ b/web/package.json
@@ -16,15 +16,25 @@
     "dts-bundle-embedded": "dts-bundle-generator --config dts-bundle-generator.json",
     "gen-revision": "echo \"export const REVISION = '`git rev-parse --short HEAD`';\" > pwa/src/revision.gen.ts",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
+    "lint": "eslint common embedded pwa",
     "pwa-icons": "pwa-asset-generator --opaque false --favicon --scrape --icon-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/icon.html pwa/src/assets-pwa",
     "pwa-splash": "pwa-asset-generator --scrape --splash-only -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
     "pwa-splash-dark": "pwa-asset-generator --scrape --splash-only --dark-mode -m pwa/src/manifest.webmanifest -i pwa/src/index.html pwa/assets-pwa-src/splashscreen.html pwa/src/assets-pwa",
     "pwa-assets": "yarn pwa-icons && yarn pwa-splash && yarn pwa-splash-dark && prettier -w --parser html pwa/src/index.html"
   },
   "private": true,
-  "devDependencies": {},
+  "devDependencies": {
+    "@angular-eslint/builder": "14.4.0",
+    "@angular-eslint/eslint-plugin": "14.4.0",
+    "@angular-eslint/eslint-plugin-template": "14.4.0",
+    "@angular-eslint/schematics": "14.4.0",
+    "@angular-eslint/template-parser": "14.4.0",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1"
+  },
   "dependencies": {
     "@angular-builders/custom-webpack": "^14.0.0",
     "@angular-devkit/build-angular": "^14.0.6",
@@ -50,7 +60,6 @@
     "@types/url-parse": "^1.4.6",
     "@types/uuid": "^8.3.4",
     "async-mutex": "^0.3.2",
-    "codelyzer": "^6.0.2",
     "copy-webpack-plugin": "^11.0.0",
     "deep-equal": "^2.0.5",
     "dts-bundle-generator": "^6.12.0",
@@ -67,7 +76,6 @@
     "ngx-markdown": "^14.0.1",
     "prettier": "^2.7.1",
     "prettier-plugin-import-sort": "^0.0.7",
-    "protractor": "~7.0.0",
     "pwa-asset-generator": "^6.1.1",
     "raw-loader": "^4.0.2",
     "rxjs": "~7.5.6",
@@ -76,7 +84,6 @@
     "ts-loader": "^9.3.1",
     "ts-node": "~10.9.1",
     "tslib": "^2.3.1",
-    "tslint": "~6.1.0",
     "typedoc": "^0.23.8",
     "typescript": "~4.7.4",
     "url-parse": "^1.5.4",
