--- a/.github/workflows/release-preview.yaml
+++ b/.github/workflows/release-preview.yaml
@@ -31,6 +31,9 @@ jobs:
       - name: Install node deps
         working-directory: web
         run: yarn install
+      - name: Lint
+        working-directory: web
+        run: yarn lint
       - name: Build Cloudpilot embedded
         working-directory: web
         run: yarn dist-embedded
